# mono-repo-release

./: .bazelrc  .depguard.yml  .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .release-please-config.json  .release-please-manifest.json  .testcoverage.yml  ARCHLINUX_SETUP.md  BUILD.bazel  CHANGELOG.md  Dockerfile  MODULE.bazel  Makefile  README.md  RELEASING.md  WORKSPACE  commitlint.config.json  cover.out  go.mod  go.sum  lcov.info  release-please-config.json
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: build-and-test.yml  ci.yml  golangci-lint.yml  release.yml  static.yml
.goreleaser/: common.yml  lib1.yml
cmd/app/: .goreleaser.yml  BUILD  BUILD.bazel  app_suite_test.go  main.go  main_test.go  suite_test.go
pkg/lib1/: .goreleaser.yml  BUILD.bazel  README.md  lib1.go  lib1_suite_test.go  lib1_test.go  suite_test.go
pkg/lib1/cmd/: BUILD.bazel
pkg/lib2/: .goreleaser.yaml  .goreleaser.yml  BUILD  BUILD.bazel  Dockerfile  README.md  lib2.go  lib2_suite_test.go  lib2_test.go  main.go  suite_test.go  version.go
pkg/lib2/cmd/: BUILD.bazel
test/: BUILD.bazel  suite_helpers.go
tools/: BAZEL.build  BUILD.bazel  print_version.sh  release.sh  update_versions.sh
tools/golangci-lint/: BUILD.bazel  lint.sh
