

module(
    name = "mono-repo-release",
    version = "0.1.0",
)

# Declare Bazel dependencies
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "gazelle")

# Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.24.5",
)
use_repo(go_sdk, "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_stretchr_testify",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
)

# Dev dependencies

bazel_dep(name = "bazel_env.bzl", version = "0.3.1", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)

