load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "test",
    srcs = ["suite_helpers.go"],
    importpath = "github.com/omargallob/mono-repo-release/test",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
