# Use prebuilt golangci-lint binary with run_binary via bzlmod external repo
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")

filegroup(
    name = "all_tools",
    srcs = [":golangci-lint"],
    visibility = ["//visibility:public"],
)

run_binary(
    name = "golangci-lint",
    srcs = ["@golangci_lint_darwin_arm64_bin//:golangci-lint"],
    outs = [],
    args = [],
    tool = ":golangci-lint",
    visibility = ["//visibility:public"],
)
