load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lib1",
    srcs = ["lib1.go"],
    importpath = "github.com/omargallob/mono-repo-release/pkg/lib1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib1_test",
    srcs = [
        "lib1_test.go",
        "suite_test.go",
    ],
    timeout = "short",
    size = "small",
    embed = [":lib1"],
    deps = [
        "//test",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
