load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lib2",
    srcs = [
        "lib2.go",
        "version.go",
    ],
    importpath = "github.com/omargallob/mono-repo-release/pkg/lib2",
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib2_test",
    srcs = [
        "lib2_test.go",
        "suite_test.go",
    ],
    embed = [":lib2"],
    timeout = "short",
    size = "small",
    deps = [
        "//test",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
