load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lib2",
    srcs = [
        "lib2.go",
        "version.go",
    ],
    importpath = "github.com/omargallob/mono-repo-release/pkg/lib2",
    visibility = ["//visibility:public"],
    deps = ["@com_github_charmbracelet_lipgloss//:lipgloss"],
)

go_test(
    name = "lib2_test",
    size = "small",
    timeout = "short",
    srcs = [
        "lib2_test.go",
        "suite_test.go",
    ],
    deps = [
        ":lib2",
        "//test",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
