load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/omargallob/mono-repo-release/pkg/lib2/cmd",
    visibility = ["//visibility:private"],
    deps = ["//pkg/lib2"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
